--- a/Uzduotis1.html
+++ b/Uzduotis1.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="Uzduotis1.css" />
-    <title>Uzduotis1</title>
+    <title>Uzduotis1 apie CSS Grid</title>
   </head>
   <body>
     <div class="grid-container">
